correction to overflow problems.

--- a/Style.css
+++ b/Style.css
@@ -13,11 +13,7 @@ font-family: 'Poppins', sans-serif;
     font-size: 38px;
 }
 
-.container{
-    height: 100px;
-    width: 100%;
-    background-color: aliceblue;
-}
+
 
 .line{
     color: aliceblue;
@@ -98,6 +94,7 @@ font-family: 'Poppins', sans-serif;
       margin: auto;
       background-color: aliceblue;
       border: solid orange 3px; 
+      overflow:scroll;
   }
 
   .container-two  {
